[package]
name = "trojan_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "trojan_rust"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
sha2 = { version = "0.10.2" }
rustls = {version = "0.20.7"}
tokio-rustls = "0.23.4"
webpki-roots = "0.22.6"
log = "0.4.17"
env_logger = "0.9.0"
bytes = "1.3.0"
http = "0.2.9"
