[package]
name = "simple_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trojan_rust = { path = "../../" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.11", features = ["derive"]}
log = "0.4.17"
env_logger = "0.9.0"
